--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   "author": "Ricardo Rodriguez",
   "license": "ISC",
   "dependencies": {
-    "dotenv": "^8.2.0"
+    "-": "0.0.1",
+    "dotenv": "8.2.0",
+    "g": "^2.0.1",
+    "testcafe": "^1.8.6",
+    "testcafe-reporter-html": "^1.4.6"
   }
 }
