--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,14 +34,25 @@ jobs:
       - run:
           name: Run tests
           command: yarn run test:chrome:headless
-
+      - slack/notify:
+          channel: todoistchallenge
+          event: fail
+          template: basic_fail_1
+      - slack/notify:
+          event: pass
+          template: success_tagged_deploy_1
 workflows:
   # Below is the definition of your workflow.
   # Inside the workflow, you provide the jobs you want to run, e.g this workflow runs the build-and-test job above.
   # CircleCI will run this workflow on every commit.
   # For more details on extending your workflow, see the configuration docs: https://circleci.com/docs/2.0/configuration-reference/#workflows
-  sample: 
+  test-and-deploy: 
     jobs:
       - build-and-test
       # For running simple node tests, you could optionally use the node/test job from the orb to replicate and replace the job above in fewer lines.
       # - node/test
+     
+  deploy_and_notify:
+    jobs:
+      - build-and-test:
+          context: todoistchallenge       
